# FinalProject

./: .gitignore  CMakeLists.txt  main.cpp  makefile
inc/: Settings.h  game.h  game_obj.h  geometry.h  gun.h  intersection.h  player.h  renderer.h  window.h  zombie.h
shaders/: TexPerspLight.frag  TexPerspLight.vert
src/: CMakeLists.txt  game.cpp  game_obj.cpp  geometry.cpp  gun.cpp  intersection.cpp  main.cpp  player.cpp  renderer.cpp  window.cpp
