add_library(shaderlib shader.cpp shaderprogram.cpp)
add_library(windowlib window.cpp)
add_library(renderlib renderer.cpp)
add_library(gamelib game.cpp)
add_library(playerlib player.cpp)
add_library(gameobjlib game_obj.cpp)
add_library(intersectionlib intersection.cpp)
add_library(geometrylib geometry.cpp)
add_library(zombielib zombie.cpp)
add_library(resourcelib resource.cpp)
add_library(gunlib gun.cpp)
# target_link_directories(shaderlib PUBLIC ${PROJECT_SOURCE_DIR}/inc/)
